--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gh-pages": "^2.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "node-sass": "^4.12.0",
     "stylelint": "^10.0.0"
   },
   "scripts": {
